--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to Ylj's Blog!</h1>
-        <small>这里记录着我所喜欢的音乐</small>
+        <small>这里记录着我所喜欢的电影</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
